added favicon img

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="images/spongebob.jpg">
     <title>Random SpongeBob Gif</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js"></script>
