--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="images/spongebob.jpg">
+    <link rel="shortcut icon" href="images/spongebob.jpg" />
     <title>Random SpongeBob Gif</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="script.js"></script>
   </head>
   <body>
     <section id="navbar">
@@ -20,11 +19,12 @@
         <h1>Random Sponge Bob API</h1>
       </div>
       <div id="buttondiv">
-        <button>Get New Gif</button>
+        <button id="button">Get New Gif</button>
       </div>
     </section>
     <section id="parent">
       <div id="showcase"></div>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
