added footer and links

--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <section id="navbar">
-      <div id="titlediv">
-        <h1>Random Sponge Bob API</h1>
-      </div>
-      <div id="buttondiv">
-        <button id="button">Get New Gif</button>
-      </div>
-    </section>
-    <section id="parent">
-      <div id="showcase"></div>
-    </section>
+    <div id="container">
+      <section id="navbar">
+        <div id="titlediv">
+          <h1>Random Sponge Bob API</h1>
+        </div>
+        <div id="buttondiv">
+          <button id="button">Get New Gif</button>
+        </div>
+      </section>
+      <section id="parent">
+        <div id="showcase"></div>
+      </section>
+    </div>
+    <footer id="footer">
+      <p>
+        Created with the
+        <a href="https://developers.giphy.com/docs/api#quick-start-guide"
+          >GIPHY API </a
+        >. &#169; 2021 <a href="https://darrellgrant.net/">darrellgrant.net</a>
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
