--- a/index.html
+++ b/index.html
@@ -36,5 +36,10 @@
       </p>
     </footer>
     <script src="script.js"></script>
+    <script type="text/javascript">
+      setTimeout(function () {
+        location = "";
+      }, 10000);
+    </script>
   </body>
 </html>
